Edit fontsize for inner-title of content (why-reason) & position of content of banner (reason-why)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -807,5 +807,13 @@ body {
     .reason-why .container .inner-wrap .inner-content .inner-title{
         font-size: 30px;
     }
+
+    .reason-why .container .inner-wrap .inner-banner .inner-content {
+        position: relative;
+        top: -20px;
+        left: -34px;
+        padding: 50px;
+        padding-top: 80px;
+    }
 }
 /* END REASON WHY  */
